--- a/backend/templates/homepage.html
+++ b/backend/templates/homepage.html
@@ -148,7 +148,7 @@
 <body>
     <div class="menu">
         <a href="/home" class="nav-btn">CARDS</a>
-        <a href="/termins" class="nav-btn">TERMINS</a>
+        <a href="/donate" class="nav-btn">DONATE</a>
         {% if is_auth %}
             <a href="/auth/logout" class="nav-btn">LOGOUT</a>
         {% else %}
