--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Example site</title>
+    <title>Пример сайта</title>
 </head>
 <body>
-    <p>Menu: <a href="/">Homepage</a> | <a href="/page">Another page</a> | <a href="/auth/logout">Logout</a></p>
-    <p>Hello. Welcome to my site!</p>
+    <p>Меню: <a href="/">Главная</a> | <a href="/page">Другая страница</a> | <a href="/auth/logout">Выйти</a></p>
+    <p>Привет! Добро пожаловать на сайт.</p>
 </body>
 </html>
