--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -125,7 +125,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h1>Пожалуйста, войдите</h1>
+        <h1>Вход</h1>
         <p>Доступ к сайту открыт только для выбранных пользователей.</p>
 
         <script async src="https://telegram.org/js/telegram-widget.js?22"
