--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -23,6 +23,9 @@
 
 /* semantic color variables for this project */
 :root {
+  --gradient-color: #ffb947;
+  --gradient-color-sec: #ff7a3c;
+  
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
