--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -25,7 +25,7 @@
 :root {
   --gradient-color: #ffb947;
   --gradient-color-sec: #ff7a3c;
-  
+
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
@@ -60,7 +60,7 @@
   margin: 0;
   font-weight: normal;
 }
-
+/* 
 body {
   margin: 0;
   min-height: 100vh;
@@ -87,4 +87,4 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
